cmake_minimum_required(VERSION 3.0)
project(Lums)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
if(NOT WIN32)
	list(APPEND CMAKE_CXX_FLAGS "-std=c++11")
endif()
find_package(OpenGL REQUIRED)
if(WIN32)
	set(PNG_LIBRARIES ${CMAKE_SOURCE_DIR}/ext/win32/lib/libpng12.lib)
	set(PNG_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/ext/win32/include)
else()
	find_package(PNG REQUIRED)
endif()
include_directories("include")
include_directories(${PNG_INCLUDE_DIRS} SYSTEM)
add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(example)