file(GLOB SRC "*.cpp")
file(GLOB HEADER "../include/Lums/*.h")
set(LINK_LIB ${OPENGL_gl_LIBRARY} ${PNG_LIBRARIES})
if (APPLE)
    file(GLOB OS_SRC "MacOSX/*.cpp" "MacOSX/*.mm")
    include_directories(MacOSX)
    list(APPEND LINK_LIB "-framework Cocoa")
endif ()
list(APPEND SRC ${OS_SRC})
add_library(Lums_shared SHARED ${SRC} ${HEADER})
add_library(Lums_static STATIC ${SRC} ${HEADER})
set_target_properties(Lums_shared PROPERTIES OUTPUT_NAME Lums)
set_target_properties(Lums_static PROPERTIES OUTPUT_NAME Lums)
if (APPLE)
    add_library(Lums_framework SHARED ${SRC} ${HEADER})
    set_target_properties(Lums_framework PROPERTIES OUTPUT_NAME Lums FRAMEWORK ON PUBLIC_HEADER "${HEADER}")
    target_link_libraries(Lums_framework ${LINK_LIB})
    install(TARGETS Lums_framework DESTINATION Library/Frameworks)
endif ()
target_link_libraries(Lums_shared ${LINK_LIB})
install(TARGETS Lums_shared DESTINATION lib)
install(TARGETS Lums_static DESTINATION lib)
install(DIRECTORY ../include/Lums DESTINATION include)
add_custom_target(Lums DEPENDS Lums_shared Lums_framework Lums_static)