cmake_minimum_required(VERSION 3.0)
project(<%= @params[:name].tr(' ', '') %>)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fno-rtti -fno-exceptions -fcolor-diagnostics")
find_package(Lums)
include_directories(${LUMS_INCLUDE_DIRS} SYSTEM)
file(GLOB_RECURSE SRC "src/*.cpp")
add_executable(<%= @params[:name].downcase.tr(' ', '') %> ${SRC})
target_link_libraries(<%= @params[:name].downcase.tr(' ', '') %> ${LUMS_LIBRARIES})
